// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CreateEditUser renders correctly 1`] = `
Object {
  "children": <Col
    span={24}
  >
    <UserForm
      extraData={Object {}}
      hidden={
        Array [
          "contact",
        ]
      }
      initialValues={
        Object {
          "active": false,
          "firstName": "",
          "id": "",
          "lastName": "",
          "practitioner": undefined,
          "userGroup": undefined,
          "username": "",
        }
      }
      keycloakBaseURL="https://keycloak-stage.smartregister.org/auth/admin/realms/opensrp-web-stage"
      opensrpBaseURL="https://opensrp-stage.smartregister.org/opensrp/rest/"
      userGroups={
        Array [
          Object {
            "id": "283c5d6e-9b83-4954-9f3b-4c2103e4370c",
            "name": "Admin",
            "path": "/Admin",
            "subGroups": Array [],
          },
          Object {
            "id": "a55f0b02-950f-4c6a-9857-667ffbba1dd5",
            "name": "Admin 2",
            "path": "/Admin 2",
            "subGroups": Array [],
          },
          Object {
            "id": "4dd15e66-7132-429b-8939-d1e601611464",
            "name": "New Group",
            "path": "/New Group",
            "subGroups": Array [],
          },
        ]
      }
    />
  </Col>,
}
`;

exports[`components/CreateEditUser renders correctly with user id 1`] = `
Object {
  "children": <Col
    span={24}
  >
    <UserForm
      extraData={
        Object {
          "api_token": "hunter2",
          "oAuth2Data": Object {
            "access_token": "bamboocha",
            "state": "abcde",
          },
        }
      }
      hidden={
        Array [
          "contact",
        ]
      }
      initialValues={
        Object {
          "access": Object {
            "impersonate": false,
            "manage": true,
            "manageGroupMembership": true,
            "mapRoles": true,
            "view": true,
          },
          "active": true,
          "createdTimestamp": 1600156317992,
          "disableableCredentialTypes": Array [],
          "email": "test@onatest.com",
          "emailVerified": false,
          "enabled": true,
          "firstName": "Demo",
          "id": "cab07278-c77b-4bc7-b154-bcbf01b7d35b",
          "lastName": "kenya",
          "notBefore": 0,
          "practitioner": Object {
            "active": true,
            "identifier": "cab07278-c77b-4bc7-b154-bcbf01b7d35b",
            "name": "prac one",
            "userId": "7306784c-64fb-4d45-990b-306863eb478b",
            "username": "prac_1",
          },
          "requiredActions": Array [],
          "totp": false,
          "userGroup": Array [
            "283c5d6e-9b83-4954-9f3b-4c2103e4370c",
            "a55f0b02-950f-4c6a-9857-667ffbba1dd5",
            "4dd15e66-7132-429b-8939-d1e601611464",
          ],
          "username": "opensrp",
        }
      }
      keycloakBaseURL="https://keycloak-stage.smartregister.org/auth/admin/realms/opensrp-web-stage"
      opensrpBaseURL="https://opensrp-stage.smartregister.org/opensrp/rest/"
      userGroups={
        Array [
          Object {
            "id": "283c5d6e-9b83-4954-9f3b-4c2103e4370c",
            "name": "Admin",
            "path": "/Admin",
            "subGroups": Array [],
          },
          Object {
            "id": "a55f0b02-950f-4c6a-9857-667ffbba1dd5",
            "name": "Admin 2",
            "path": "/Admin 2",
            "subGroups": Array [],
          },
          Object {
            "id": "4dd15e66-7132-429b-8939-d1e601611464",
            "name": "New Group",
            "path": "/New Group",
            "subGroups": Array [],
          },
        ]
      }
    />
  </Col>,
}
`;
